Fix dark mode toggle

--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -837,7 +837,7 @@ body, html {
   color: var(--color-light);
   font-size: 1rem;
   cursor: pointer;
-  margin-left: auto;
+  margin-left: 10px;
 }
 
 .back-btn {
